--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
       href="https://unicons.iconscout.com/release/v4.0.8/css/line.css"
     />
   </head>
-
   <body oncontextmenu="return false">
+  <div class="text-container">
+
     <header class="header" id="header">
       <nav class="nav container">
         <a href="#" class="nav__logo">Soumen</a>
@@ -185,7 +186,7 @@
           </div>
         </div>
       </section>
-
+ 
       <!--===================== SKILLS =====================-->
 
       <section class="skills section" id="skills">
@@ -813,6 +814,25 @@
     <a href="#" class="scrollup" id="scroll-up">
       <i class="uil uil-arrow-up scrollup__icon"></i>
     </a>
+    <div class="gradient-bg">
+      <svg xmlns="http://www.w3.org/2000/svg">
+        <defs>
+          <filter id="goo">
+            <feGaussianBlur in="SourceGraphic" stdDeviation="10" result="blur" />
+            <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -8" result="goo" />
+            <feBlend in="SourceGraphic" in2="goo" />
+          </filter>
+        </defs>
+      </svg>
+      <div class="gradients-container">
+        <div class="g1"></div>
+        <div class="g2"></div>
+        <div class="g3"></div>
+        <div class="g4"></div>
+        <div class="g5"></div>
+        <div class="interactive"></div>
+      </div>
+    </div>
 
     <script type="text/javascript" src="assets/swiper-bundle.min.js"></script>
     <script
@@ -820,5 +840,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="assets/ptj.js"></script>
+    </div>
   </body>
 </html>
